fixed filter spacing

--- a/client/src/components/pages/Product/style.css
+++ b/client/src/components/pages/Product/style.css
@@ -1,7 +1,3 @@
-.container{
-    min-height:80vh;
-}
-
 .product{
     margin-top:25px;
     margin-bottom:25px;
